--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
 body {
-  
-  
   background: #0f172a; 
   background: radial-gradient(circle at top left, #1e1b4b, #312e81, #0f172a);
   background-attachment: fixed;
@@ -47,9 +33,9 @@ body {
 
 @keyframes bounceIn {
   0% { opacity: 0; transform: scale(0.3); }
-  50% { opacity: 1; transform: scale(1.05); }
-  70% { transform: scale(0.9); }
-  100% { transform: scale(1); }
+  /* 50% { opacity: 1; transform: scale(1.05); }
+  70% { transform: scale(0.9); } */
+  100% { opacity: 1; transform: scale(1); }
 }
 
 .animate-fade-in-down {
